--- a/3주차 실습/문제5.html
+++ b/3주차 실습/문제5.html
@@ -10,19 +10,19 @@
         <table>
             <tr>
                 <td>Text input 입니다.</td>
-                <td><input type="text" name="text input" value="Text의 Value입니다."></td>
+                <td><input type="text" name="text input" value="Text type의 value는 입력 필드의 초깃값을 정의합니다." size="50"></td>
             </tr>
             <tr>
                 <td>Radio input 입니다.</td>
-                <td><input type="radio" name="radio input" value="Radio의 Value입니다."> Radio</td>
+                <td><input type="radio" name="radio input" value="Radio의 Value입니다.">Radio type의 value는 해당 입력 필드 선택 시 서버로 제출되는 값을 정의합니다.</td>
             </tr>
             <tr>
-                <td>Number input 입니다.</td>
-                <td><input type="number" name="number input" value="2020010847"></td>
+                <td>number input 입니다.</td>
+                <td><input type="number" name="number input" value="2020010847"> number type의 value는 입력 필드의 초깃값을 정의하나, 숫자만 입력 가능합니다.</td>
             </tr>
             <tr>
-                <td>Button input입니다.</td>
-                <td><input type="button" name="button input" value="button의 Value입니다."></td>
+                <td>button input입니다.</td>
+                <td><input type="button" name="button input" value="button type의 value는 버튼 내 텍스트를 정의합니다."></td>
             </tr>
         </table>
     </form>
