--- a/3주차 실습/inner.html
+++ b/3주차 실습/inner.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>이 웹페이지는 iframe 방식으로 표현됩니다.</h1>
+    <h1>이 웹페이지는 iframe 방식으로 표시됩니다.</h1>
 </body>
 </html>
