--- a/3주차 실습/예제9.html
+++ b/3주차 실습/예제9.html
@@ -8,7 +8,7 @@
 <body>
     <form action="">
         <label for="male">남성</label>
-        <input type="radio" name="gender" id="male" value="male"><br>
+        <input type="radio" name="gender" id="male" value="male" checked><br>
         <label for="female">여성</label>
         <input type="radio" name="gender" id="female" value="female"><br>
         <input type="submit" value="제출">
