--- a/7주차 실습/예제12.html
+++ b/7주차 실습/예제12.html
@@ -12,6 +12,7 @@
         
         let inr2 = (x) => {return x + 1;}
 
+        document.write("x = 5, x의 값을 매개변수로 받아 1 증가시키는 무명함수와 화살표 함수 <br>");
         document.write(`inr(x) = ${inr(x)}<br>inr2(x) = ${inr2(x)}`);
     </script>
 </head>
