--- a/7주차 실습/예제5.html
+++ b/7주차 실습/예제5.html
@@ -7,11 +7,11 @@
     <script>
         let x = 1;
         document.write("let x = 1<br>");
-        document.write(`x === 1 / ${x === 1}<br>`);
-        document.write(`x === "1" / ${x === "1"}<br>`);
-        document.write(`x == "1" / ${x == "1"}<br>`);
-        document.write(`x !== 1 / ${x !== 1}<br>`);
-        document.write(`x !== "1" / ${x !== "1"}<br>`);
+        document.write(`x === 1 // ${x === 1}<br>`);
+        document.write(`x === "1" // ${x === "1"}<br>`);
+        document.write(`x == "1" // ${x == "1"}<br>`);
+        document.write(`x !== 1 // ${x !== 1}<br>`);
+        document.write(`x !== "1" // ${x !== "1"}<br>`);
     </script>
 </head>
 <body>
