--- a/6주차 실습/예제4.html
+++ b/6주차 실습/예제4.html
@@ -13,8 +13,8 @@
             transition: width 0.5s;
         }
         div:hover {
-            width: 200px;
-            height: 100px;
+            width: 200px; height: 100px;
+            border: 10px solid red;
             transform: rotate(180deg);
         }
     </style>
